# CUDA-Raytracer

./: .gitignore  CMakeLists.txt  README.md
cpu_version/: Color.cpp  Light.h  Ray.cpp  Sphere.cpp  Vec3f.cpp  Vec3f.h  color.cpp  main.cpp  ray.cpp  sphere.cpp
cpu_version/inc/: Color.hpp  Light.hpp  Ray.hpp  Sphere.hpp  Vec3f.hpp  color.hpp  light.hpp  ray.hpp  sphere.hpp
gpu_version/: Light.cuh  Light.h  Vec3f.cu  Vec3f.cuh  Vec3f.h  cuda_util.h  main.cu
